# command-center

./: Cargo.toml
backend/: Cargo.toml
backend/src/: logger.rs  main.rs
frontend/: Cargo.toml  index.html  style.css
frontend/src/: main.rs
