[package]
name = "command-center-backend"
version = "0.1.0"
edition = "2021"
default-run = "command-center-backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.24.0"
zmq = "0.9"
clap = {version = "4.0", features = ["derive"]}
log = "0.4.17"